--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div id="scheduleContent" class="tab-content active">
-  <h2>Schedule</h2>
-  <p>Hover over a date block, then click for more info.</p>
+  <h2>Hacking History Schedule</h2>
+  <p>Click for more info on each class day.</p>
 
   <!-- We'll build a grid from all class posts -->
   <div class="schedule-grid">
