--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -2,14 +2,7 @@
 <div class="announcement">
   <hr class="announcement-separator">
   <p class="announcement-date">Posted on 01/12/2025</p>
-  <p><strong>Welcome to the class!</strong> Here some info on it...</p>
+  <p><strong>Welcome to CSE194: Cybersecurity History and Culture</strong>, which we will refer to as Hacker History from now on.</p>
+  <p>You'll be able to find most class related things on this site for the rest of the semester.</p>
   <hr class="announcement-separator">
 </div>
-
-<div class="announcement">
-  <hr class="announcement-separator">
-  <p class="announcement-date">Posted on 01/20/2025</p>
-  <p><strong>Important:</strong> Syllabus updated with new deadlines.</p>
-  <hr class="announcement-separator">
-</div>
-
