Add more classes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,7 @@
   <!-- TAB NAV -->
   <div class="tab-container">
     <div class="tab active" id="scheduleTab">Schedule</div>
-    <div class="tab" id="announcementsTab">
-      Announcements
-      <span class="new-badge" id="newBadge" style="display: none;">NEW</span>
+    <div class="tab" id="announcementsTab">Announcements<span class="new-badge" id="newBadge" style="display: none;">NEW</span>
     </div>
   </div>
 
