--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -1,8 +1,19 @@
 <!-- Example announcements, each with dashed lines, posted date, etc. -->
 <div class="announcement">
+  
   <hr class="announcement-separator">
   <p class="announcement-date">Posted on 01/12/2025</p>
   <p><strong>Welcome to CSE194: Cybersecurity History and Culture</strong>, which we will refer to as Hacker History from now on.</p>
   <p>You'll be able to find most class related things on this site for the rest of the semester.</p>
+  <hr class="announcement-separator">
+  
+  <hr class="announcement-separator">
+  <p class="announcement-date">Posted on 01/13/2025</p>
+  <p>Welcome to the first week of the Cybersecurity History and Culture class. Hopefully, you could attend the class today and watch the epic movie Hackers with us; however if you are a late-add to the class or could not make it, here is some important information below.</p>
+  <p>You can find today&#39;s slides here: <a href="https://tinyurl.com/cse194-hh">https://tinyurl.com/cse194-hh</a></p>
+  <p>There is no class next week (MLK Day)</p>
+  <p>There are currently two assignments: Assignment 0 and Assignment 1, all submission is done through Canvas. The first is due in a week, and the second is due in two. The second assignment requires you to watch the movie Hackers (1995).</p>
+  <p>Next class, I&#39;ll start taking attendance for the 15% specified in the syllabus, so make sure to show up :).</p>
+  <p>Have a great week and start to the semester. If you have any questions, please email me at mahaloz@asu.edu (or the standard zbasque@asu.edu). Hack The Planet!</p>
   <hr class="announcement-separator">
 </div>
