--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -16,4 +16,13 @@
   <p>Next class, I&#39;ll start taking attendance for the 15% specified in the syllabus, so make sure to show up :).</p>
   <p>Have a great week and start to the semester. If you have any questions, please email me at mahaloz@asu.edu (or the standard zbasque@asu.edu). Hack The Planet!</p>
   <hr class="announcement-separator">
+
+  <hr class="announcement-separator">
+  <p class="announcement-date">Posted on 01/31/2025</p>
+  <p>This is both a reminder and an update announcement. Your assignment on responding to Trusting Trust is due on Sunday. I also have some updates about the next class and a later field trip.</p>
+  <p><strong>Next class (Monday, Feb 3):</strong> we will be watching a movie (2hr) after the lecture. Feel free to bring snacks to enjoy during the film.</p>
+  <p><strong>CactusCon 2025 (Friday, Feb 14):</strong> I have just added a new assignment, <a href="https://asu.instructure.com/courses/211698/assignments/6054456" title="CactusCon 2025 Registration">CactusCon 2025 Registration</a>, which is due <strong>next week Sunday</strong>. I will talk about this class field trip next week (including timing constraints with other classes), but I highly recommend you register for it this week (or weekend), as it is free right now. Please do it even if you think you have time conflicts.</p>
+  <p>Have a good weekend!</p>
+  <hr class="announcement-separator">
+
 </div>
