Revert "Fix profiles lol"
This reverts commit 97dc4d2e9941e1e3760ebc1b8ba355a1a94955fb.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
   <div class="tab-container">
     <a href="/" class="tab {% if page.url == '/' %}active{% endif %}" id="scheduleTab">Schedule</a>
     <a href="/announcements.html" class="tab {% if page.url == '/announcements.html' %}active{% endif %}" id="announcementsTab">Announcements<span class="new-badge" id="newBadge" style="display: none;">NEW</span></a>
-    <a href="/profiles.html" class="tab {% if page.url == '/profiles.html' %}active{% endif %}" id="profilesTab">profiles</a>
+    <a href="/prophiles.html" class="tab {% if page.url == '/prophiles.html' %}active{% endif %}" id="prophilesTab">Prophiles</a>
   </div>
 
   <!-- PAGE CONTENT goes here -->
