--- a/_layouts/prophile.html
+++ b/_layouts/prophile.html
@@ -10,7 +10,7 @@
   <div class="tab-container">
     <a href="/" class="tab {% if page.url == '/' %}active{% endif %}" id="scheduleTab">Schedule</a>
     <a href="/announcements.html" class="tab {% if page.url == '/announcements.html' %}active{% endif %}" id="announcementsTab">Announcements<span class="new-badge" id="newBadge" style="display: none;">NEW</span></a>
-    <a href="/prophiles.html" class="tab {% if page.url == '/prophiles.html' %}active{% endif %}" id="prophilesTab">Prophiles</a>
+    <a href="/prophiles.html" class="tab {% if page.url == '/prophiles.html' %}active{% endif %}" id="prophilesTab">Pro-Philes</a>
   </div>
 
   <div class="prophile-container">
